# kap-16

./: README.md
asm/: Cake.mk  Cargo.toml
asm/doc/src/: fib.s
asm/include/as/: inst.h  instr.h  lexer.h  parser.h  reader.h  types.h  writer.h
asm/include/log/: logger.h
asm/src/: inst.rs  lex.rs  lib.rs  line.rs  main.cc  main.rs  prep.rs  rdwr.rs  scope.rs  unit.rs
asm/src/inst/: add.rs  and.rs  bra.rs  cmp.rs  ldr.rs  mov.rs  mul.rs  orr.rs  shf.rs  str.rs  sub.rs  xor.rs
asm/src/lib/as/: lexer.cc  parser.cc  reader.cc  writer.cc
asm/src/lib/log/: logger.cc
doc/: SPEC.md
doc/huffman/: README.md
doc/huffman/data/: inst.csv
doc/huffman/src/: huffman.py
doc/instr/: ADD.md  AND.md  BRA.md  CMN.md  CMP.md  LDR.md  LSR.md  MOV.md  MUL.md  NEG.md  ORR.md  PUSH.md  SHF.md  STR.md  SUB.md  XOR.md
doc/roms/: inst.rom  load.rom  test.rom
doc/src/: huffman.py
docs/huffman/data/: example.csv
emu/: Cargo.toml  a.out
emu/src/: inst.rs  lib.rs  main.rs  proc.rs  ram.rs  reg.rs  util.rs
emu/src/inst/: add.rs  and.rs  bra.rs  cmp.rs  ldr.rs  mov.rs  mul.rs  orr.rs  shf.rs  str.rs  sub.rs  xor.rs
prog/src/lib/: std.s
spec/: ARCH.md  ISA.md  README.md
spec/inst/: ADD.md  AND.md  BRA.md  CALL.md  CMP.md  HLT.md  IFF.md  LDR.md  MOV.md  MUL.md  ORR.md  SHF.md  STR.md  SUB.md  SYS.md  XOR.md
spec/instr/: AND.md  BRA.md  CMP.md  LDR.md  MUL.md  POP.md  RSB.md  STR.md  XOR.md
