[package]
name = "asm"
version = "0.1.0"
authors = ["Zakhary Kaplan <zakharykaplan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
colored = "2.0.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
