[package]
name = "asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.5"
