[package]
name = "emu"
version = "0.1.0"
authors = ["Zakhary Kaplan <zakharykaplan@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
